--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -12,29 +12,27 @@ jobs:
     name: Update Readme with Mentrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master # this action name
+      - uses: athul/waka-readme@master # this action name
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           API_BASE_URL: https://wakatime.com/api
           # content
-          SHOW_LANGUAGE: "True"
-          SHOW_PROJECTS: "True"
-          # SHOW_TITLE: true # optional
-          # SECTION_NAME: waka # optional
-          # BLOCKS: -> # optional
-          # CODE_LANG: rust # optional
-          # TIME_RANGE: all_time # optional
-          # LANG_COUNT: 10 # optional
-          # SHOW_TIME: true # optional
-          # SHOW_TOTAL: true # optional
-          # SHOW_MASKED_TIME: false # optional
-          # STOP_AT_OTHER: true # optional
-          # IGNORED_LANGUAGES: YAML JSON TOML # optional
-          # ### commit
-          # COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
-          # TARGET_BRANCH: master # optional
-          # TARGET_PATH: README.md # optional
-          # COMMITTER_NAME: GitHubActionBot # optional
-          # COMMITTER_EMAIL: action-bot@github.com # optional
+          SHOW_TITLE: true # optional
+          SECTION_NAME: waka # optional
+          BLOCKS: -> # optional
+          CODE_LANG: rust # optional
+          TIME_RANGE: all_time # optional
+          LANG_COUNT: 10 # optional
+          SHOW_TIME: true # optional
+          SHOW_TOTAL: true # optional
+          SHOW_MASKED_TIME: false # optional
+          STOP_AT_OTHER: true # optional
+          IGNORED_LANGUAGES: YAML JSON TOML # optional
+          ### commit
+          COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
+          TARGET_BRANCH: master # optional
+          TARGET_PATH: README.md # optional
+          COMMITTER_NAME: GitHubActionBot # optional
+          COMMITTER_EMAIL: action-bot@github.com # optional
           
